# Giaic-Hackathon

./: $null  .gitignore  QWEN.md  pyproject.toml
.specify/memory/: constitution.md
backend/: .pre-commit-config.yaml  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: tools.py  tutor_agent.py
backend/app/api/: middleware.py  routes.py
backend/app/core/: config.py  settings.py
backend/app/db/: models.py  neon.py  qdrant_client.py
backend/app/rag/: embeddings.py  generator.py  ingestion.py  pipeline.py  retriever.py
backend/app/utils/: chunking.py  exceptions.py  logging.py  text_cleaner.py
docs/: docusaurus.config.ts  intro.md  package-lock.json  package.json
docs/docs/: index.md
docs/docs/chapter-01-introduction/: _category_.json  lesson-01-physical-ai.md  lesson-02-embodied-intelligence.md  lesson-03-digital-physical-systems.md  lesson-04-humanoid-robotics.md
docs/docs/chapter-02-sensors/: _category_.json  lesson-01-robot-sensor-systems.md  lesson-02-cameras-depth-sensing.md  lesson-03-lidar-spatial-mapping.md  lesson-4-imu-balance-sensing.md  lesson-5-sensor-fusion-basics.md
docs/docs/chapter-03-ros2/: _category_.json  lesson-01-what-is-ros2.md  lesson-02-nodes-topics-messages.md  lesson-03-services-actions.md  lesson-4-ros2-python.md  lesson-5-launch-files-parameters.md  lesson-6-urdf-humanoid-robots.md
docs/docs/chapter-04-simulation/: _category_.json  lesson-01-introduction-simulation.md
docs/src/pages/: index.tsx
specs/001-rag-textbook-tutor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-create-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-update-docs-constraint/: data-model.md  plan.md  quickstart.md  research.md  spec.md
(+24 files in other folders)
